fix: cards gap and transition color

--- a/src/global.css
+++ b/src/global.css
@@ -53,9 +53,8 @@ a {
   max-width: 1550px;
   margin-top: 7.75rem;
   display: flex;
-  /* justify-content: space-between; */
   flex-wrap: wrap;
-  flex-flow: row wrap;
+  gap: 30px;
 }
 
 .card footer {
@@ -65,14 +64,10 @@ a {
   justify-content: space-between;
 }
 
-.cards .card:not(:last-child) {
-  margin-right: 30px;
-}
-
 .card {
   width: 286px;
   height: 310px;
-  background: var(--primary);
+  background-color: var(--primary);
   backdrop-filter: blur(40px);
   border-radius: 8px;
   color: var(--text-color);
@@ -81,12 +76,12 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  transition: .8s ease all;
+  transition: background-color .8s ease;
 }
 
 ._card {
-  background: var(--secondary-variant);
-  transition: .8s ease all;
+  background-color: var(--secondary-variant);
+  transition: background-color .8s ease;
   color: var(--primary);
 }
 
